_docs/archive/cryptpad/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cryptpad
  namespace: cryptpad
  labels:
    app.kubernetes.io/name: cryptpad
    app.kubernetes.io/instance: cryptpad-${ENVIRONMENT}
    environment: "${ENVIRONMENT}"
spec:
  type: ClusterIP
  selector:
    app: cryptpad
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
    - name: ws
      port: 3003
      targetPort: ws
      protocol: TCP
