_docs/archive/cryptpad/base/httproute-sandbox.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cryptpad-sandbox
  namespace: cryptpad
  labels:
    app.kubernetes.io/name: cryptpad
    app.kubernetes.io/instance: cryptpad-${ENVIRONMENT}
    environment: "${ENVIRONMENT}"
    cryptpad.home-0ps.com/origin: sandbox
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: networking
  hostnames:
    - "${CRYPTPAD_SANDBOX_SUBDOMAIN}.home-0ps.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cryptpad_websocket
      backendRefs:
        - name: cryptpad
          port: 3003
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cryptpad
          port: 3000
